save optimizer in model

--- a/Scripts_New/colab.ipynb
+++ b/Scripts_New/colab.ipynb
@@ -55,7 +55,14 @@
     }
    ],
    "source": [
-    "!python main.py"
+    "'''\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/gdrive')\n",
+    "%cd gdrive/My Drive/mario\n",
+    "! git clone https://github.com/ashantanu/Mario-Level-Generator.git\n",
+    "!cd Mario-Level-Generator\n",
+    "!git pull\n",
+    "'''"
    ]
   },
   {
@@ -63,7 +70,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!python main.py --num_epochs=1  --batch_size=128"
+   ]
   },
   {
    "cell_type": "code",
