remove summary writer

--- a/Scripts_New/colab.ipynb
+++ b/Scripts_New/colab.ipynb
@@ -56,6 +56,7 @@
    ],
    "source": [
     "'''\n",
+    "#https://medium.com/@ashwindesilva/how-to-use-google-colaboratory-to-clone-a-github-repository-e07cf8d3d22b\n",
     "from google.colab import drive\n",
     "drive.mount('/content/gdrive')\n",
     "%cd gdrive/My Drive/mario\n",
@@ -63,6 +64,18 @@
     "!cd Mario-Level-Generator\n",
     "!git pull\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torch==1.6.0 torchvision==0.7.0\n",
+    "!pip install transformers==3.1.0\n",
+    "!pip install tokenizers==0.8.1rc2\n",
+    "!pip install tensorboard==2.3.0"
    ]
   },
   {
